--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./fonts/remixicon.css">
-    <title>Document</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="./styles/loginstyle.css">
 </head>
-<body>
-    <div class="container">
-    </div>
-<script type="module" src="./data.js"></script>
-<script type="module" src="./script.js"></script>
 
+<body>
+<div class="page-container">
+<div class="form-container">
+<form class="form-submission"></form>
+</div>
+</div>
+
+
+
+<script src="./LoginPage/script.js"></script>
 </body>
+
 </html>
+
+
+<!-- Requirement
+
+Email
+Password
+
+
+-->
